# sood-compiler

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  main.cpp  out.sood.ast  parser.y  tokens.l
img/: sood-logo.examples.drawio
include/: ast.hpp  cli.hpp  codegen.hpp  subprocess.hpp
src/: CMakeLists.txt  Makefile  ast-codegen.cpp  ast.cpp  cli.cpp  codegen-context.cpp  codegen.cpp  codegen.hpp  core-functions.cpp  lexer.l  main.cpp  parser.y  sood
tests/: fizz-buzz.sood  fizz-buzz.sood.ll  fizz-buzz.sood.s  fizz-buzz.sood.working.ll  helloworld.sood  helloworld.sood.ll  notes.sh  simple-arithmetic.sood  simple-block.sood  simple-constructs.sood  simple-func-decls.sood  simple-ifs.sood  simple-var-decls.sood  simple-var-decls.sood.ll  single-var-decl.sood
